--- a/automation_testcase/Functional_Testing/Configuration/config.properties
+++ b/automation_testcase/Functional_Testing/Configuration/config.properties
@@ -1,7 +1,10 @@
 baseURL=
-loginURL=http://localhost:3000/login
-username=
-password=
+loginURL=https://www.saucedemo.com/
+standardUser = standard_user
+lockedOutUser = locked_out_user
+problemUser = problem_user
+performanceGlitchUser = performance_glitch_user
+password= secret_sauce
 chromepath=./Drivers\\chromedriver.exe
 iepath=./Drivers\\IEDriverServer.exe
 firefoxpath=./Drivers\\geckodriver.exe
