--- a/automation_testcase/Functional_Testing/pom.xml
+++ b/automation_testcase/Functional_Testing/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>Yoloj_Project</groupId>
+  <groupId>SauceDemo_Project</groupId>
   <artifactId>Functional_Testing</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
