Done all changes

--- a/automation_testcase/Functional_Testing/Configuration/config.properties
+++ b/automation_testcase/Functional_Testing/Configuration/config.properties
@@ -8,4 +8,5 @@ password= secret_sauce
 chromepath=./Drivers\\chromedriver.exe
 iepath=./Drivers\\IEDriverServer.exe
 firefoxpath=./Drivers\\geckodriver.exe
+edgepath=./Drivers\\msedgedriver.exe
 loginData=./TestDatas\\LoginData.xlsx
